sort.dutchflag.DutchFlagAlgo.scala.code
def solve() {
  var afterBlue=0
  var beforeWhite=getSize()-1
  var WhiteRed=getSize()-1
  for (i<- 1 to getSize()){
    if (getColor(afterBlue)==blue){
      afterBlue=afterBlue+1
    }else if (getColor(afterBlue)==red){
      swap(afterBlue,beforeWhite)
      beforeWhite=beforeWhite-1
    }else{
      
    }
    }
  }
}